--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-bitcoin-seeder
+Quark2-seeder
 ==============
 
-Bitcoin-seeder is a crawler for the Bitcoin network, which exposes a list
+Bitcoin-seeder is a crawler for the Quark2 network, which exposes a list
 of reliable nodes via a built-in DNS server.
 
 Features:
